--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   },
   "dependencies": {
     "expo": "~47.0.3",
-    "expo-status-bar": "~1.4.2",
+    "expo-av": "^13.0.1",
+    "expo-blur": "^12.0.1",
+    "expo-image-picker": "^14.0.1",
+    "expo-linear-gradient": "^12.0.1",
+    "expo-screen-orientation": "^5.0.1",
+    "expo-secure-store": "^12.0.0",
+    "expo-splash-screen": "^0.17.4",
+    "expo-status-bar": "^1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5"
   },
