--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
 		"splash": {
 			"image": "./app/assets/splash.png",
 			"resizeMode": "contain",
-			"backgroundColor": "#ffffff"
+			"backgroundColor": "#111111"
 		},
 		"updates": {
 			"fallbackToCacheTimeout": 0
@@ -22,7 +22,7 @@
 		"android": {
 			"adaptiveIcon": {
 				"foregroundImage": "./app/assets/adaptive-icon.png",
-				"backgroundColor": "#FFFFFF"
+				"backgroundColor": "#111111"
 			}
 		},
 		"web": {
