--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@react-navigation/native": "^6.1.1",
 		"@react-navigation/native-stack": "^6.9.6",
+		"axios": "^1.2.1",
 		"babel-plugin-inline-dotenv": "^1.7.0",
 		"babel-preset-expo": "^9.2.2",
 		"clsx": "^1.2.1",
@@ -31,7 +32,8 @@
 		"react-native": "0.70.5",
 		"react-native-reanimated": "^2.12.0",
 		"react-native-safe-area-context": "4.4.1",
-		"react-native-screens": "~3.18.0"
+		"react-native-screens": "~3.18.0",
+		"react-native-toast-message": "^2.1.5"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
