--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
+		"@react-native-async-storage/async-storage": "~1.17.3",
 		"@react-navigation/native": "^6.1.1",
 		"@react-navigation/native-stack": "^6.9.6",
+		"@tanstack/react-query": "^4.20.4",
 		"axios": "^1.2.1",
 		"babel-plugin-inline-dotenv": "^1.7.0",
 		"babel-preset-expo": "^9.2.2",
@@ -23,13 +25,14 @@
 		"expo-image-picker": "~14.0.2",
 		"expo-linear-gradient": "~12.0.1",
 		"expo-screen-orientation": "^5.0.1",
-		"expo-secure-store": "^12.0.0",
+		"expo-secure-store": "~12.0.0",
 		"expo-splash-screen": "~0.17.5",
 		"expo-status-bar": "^1.4.2",
 		"nativewind": "^2.0.11",
 		"react": "18.1.0",
 		"react-hook-form": "^7.40.0",
 		"react-native": "0.70.5",
+		"react-native-async-storage": "^0.0.1",
 		"react-native-reanimated": "^2.12.0",
 		"react-native-safe-area-context": "4.4.1",
 		"react-native-screens": "~3.18.0",
