--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"react-hook-form": "^7.40.0",
 		"react-native": "0.70.5",
 		"react-native-async-storage": "^0.0.1",
-		"react-native-reanimated": "^2.12.0",
+		"react-native-reanimated": "~2.12.0",
 		"react-native-safe-area-context": "4.4.1",
 		"react-native-screens": "~3.18.0",
 		"react-native-toast-message": "^2.1.5"
