--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-native": "0.70.5",
 		"react-native-async-storage": "^0.0.1",
 		"react-native-reanimated": "~2.12.0",
+		"react-native-render-html": "^6.3.4",
 		"react-native-safe-area-context": "4.4.1",
 		"react-native-screens": "~3.18.0",
 		"react-native-toast-message": "^2.1.5"
