--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
 		"react-hook-form": "^7.40.0",
 		"react-native": "0.70.5",
 		"react-native-async-storage": "^0.0.1",
+		"react-native-dropdown-picker": "^5.4.4",
 		"react-native-pell-rich-editor": "^1.8.8",
 		"react-native-reanimated": "~2.12.0",
 		"react-native-render-html": "^6.3.4",
 		"react-native-safe-area-context": "4.4.1",
 		"react-native-screens": "~3.18.0",
+		"react-native-system-navigation-bar": "^2.1.0",
 		"react-native-toast-message": "^2.1.5",
 		"react-native-webview": "11.23.1"
 	},
